--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# Database Configuration
-DATABASE_HOST=localhost
+# Database Configuration - Supabase PostgreSQL
+# Get your database password from Supabase Dashboard > Settings > Database
+DATABASE_HOST=db.pexegznhienpfzllsczo.supabase.co
 DATABASE_PORT=5432
-DATABASE_NAME=iss_orange
-DATABASE_USER=iss_user
-DATABASE_PASSWORD=change_this_password
+DATABASE_NAME=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=Versace235OK.
 
 # Backend Configuration
 PORT=3000
